<resources>
    <string name="app_name">Project_2</string>
    <string name="dnd_character_creator">DND Character Creator</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="dnd_character_tracker">DND Character Tracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="place_holder_for_scrolling_character_menu">Place Holder for Scrolling Character Menu</string>
    <string name="username_ph">Username PH</string>
    <string name="view_character">View Character</string>
    <string name="preference_file_key">daclinkPreferenceFileNameDnD</string>
    <string name="preference_userId_key">daclinkPreferencesUserIdKeyDnd</string>
    <string name="create_character">Create Character</string>
    <string name="admin">Admin</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="name">Name:</string>
    <string name="characterClass">Class:</string>
    <string name="race">Race:</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="standard_array">Standard Array</string>
    <string name="roll_stats">Roll Stats</string>
    <string name="strength">Strength:</string>
    <string name="dexterity">Dexterity:</string>
    <string name="constitution">Constitution:</string>
    <string name="intelligence">Intelligence:</string>
    <string name="wisdom">Wisdom:</string>
    <string name="charisma">Charisma:</string>
    <string-array name="character_classes">
        <item>Select a Class</item>
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="character_race">
        <item>Select a Race</item>
        <item>Dragonborn</item>
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Gnome</item>
        <item>Half-Elf</item>
        <item>Half-Orc</item>
        <item>Halfling</item>
        <item>Human</item>
        <item>Tiefling</item>
    </string-array>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="delete_user">Delete User</string>
    <string name="username_to_delete">Username to Delete</string>
    <string name="re_enter_username">Re-Enter Username</string>
    <string name="select_user_to_modify">Select user to modify</string>
    <string name="set_admin">Set Admin</string>
    <string name="dex">Dex</string>
    <string name="str">Str</string>
    <string name="con">Con</string>
    <string name="intel">Int</string>
    <string name="wis">Wis</string>
    <string name="cha">Cha</string>
    <string name="inventory">Inventory</string>
    <string name="goHome">home</string>
    <string name="name_level_race_class">Name, level, race, class</string>
    <string name="base_value">Base value</string>
    <string name="bonuses">Bonuses</string>
    <string name="_0">0</string>
    <string name="spellbook">Spellbook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inventory_fragment">Inventory Fragment</string>
    <string name="spellBook">SpellBook</string>
    <string name="select_a_character">Select a Character</string>
</resources>