<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewHolders.AdminActivity">


    <TextView
        android:id="@+id/adminActivityDisplayLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/select_user_to_modify"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/userNameDropDown"
        android:layout_width="386dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adminActivityDisplayLabel" />


    <EditText
        android:id="@+id/usernameToDeleteEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:autofillHints="Please enter a Username"
        android:gravity="center"
        android:hint="@string/username_to_delete"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameDropDown" />

    <EditText
        android:id="@+id/usernameToDeleteConfirmEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:autofillHints="Please re-enter Username"
        android:gravity="center"
        android:hint="@string/re_enter_username"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameToDeleteEditText" />


    <Button
        android:id="@+id/deleteUserAdminActivityButton"
        android:layout_width="296dp"
        android:layout_height="67dp"
        android:layout_margin="16dp"
        android:text="@string/delete_user"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameToDeleteConfirmEditText" />

    <Button
        android:id="@+id/setUserAdminButton"
        android:layout_width="296dp"
        android:layout_height="67dp"
        android:layout_margin="16dp"
        android:text="@string/set_admin"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteUserAdminActivityButton" />

    <Button
        android:id="@+id/homeButtonAdminActivity"
        android:layout_width="304dp"
        android:layout_height="79dp"
        android:layout_margin="16dp"
        android:text="@string/home"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setUserAdminButton" />

</androidx.constraintlayout.widget.ConstraintLayout>