<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewHolders.CharacterCreationActivity">

    <TextView
        android:id="@+id/characterCreatorTitle"
        android:layout_width="388dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/dnd_character_creator"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/characterNameTextView"
        android:layout_width="70dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characterCreatorTitle" />

    <EditText
        android:id="@+id/characterNameEditText"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@id/characterNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/characterCreatorTitle" />

    <TextView
        android:id="@+id/characterClassTextView"
        android:layout_width="70dp"
        android:layout_height="34dp"
        android:layout_marginTop="36dp"
        android:text="@string/characterClass"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characterNameTextView" />

    <Spinner
        android:id="@+id/characterClassSpinner"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@id/characterClassTextView"
        app:layout_constraintTop_toBottomOf="@id/characterNameEditText" />

    <TextView
        android:id="@+id/characterRaceTextView"
        android:layout_width="70dp"
        android:layout_height="34dp"
        android:layout_marginTop="36dp"
        android:text="@string/race"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characterClassTextView" />

    <Spinner
        android:id="@+id/characterRaceSpinner"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@id/characterRaceTextView"
        app:layout_constraintTop_toBottomOf="@id/characterClassSpinner" />

    <Button
        android:id="@+id/customEntryButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/manual_entry"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characterRaceSpinner" />

    <Button
        android:id="@+id/standardArrayButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/standard_array"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characterRaceSpinner" />

    <Button
        android:id="@+id/rollStatsButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/roll_stats"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characterRaceSpinner" />

    <TextView
        android:id="@+id/strengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/strength"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollStatsButton" />

    <TextView
        android:id="@+id/dexterityTextView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/dexterity"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strengthTextView" />

    <TextView
        android:id="@+id/constitutionTextView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/constitution"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dexterityTextView" />

    <TextView
        android:id="@+id/intelligenceTextView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/intelligence"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constitutionTextView" />

    <TextView
        android:id="@+id/wisdomTextView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="28dp"
        android:text="@string/wisdom"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intelligenceTextView" />

    <TextView
        android:id="@+id/charismaTextView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/charisma"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wisdomTextView" />

    <EditText
        android:id="@+id/strengthEditText"
        android:layout_width="276dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@id/strengthTextView"
        app:layout_constraintTop_toBottomOf="@+id/rollStatsButton" />

    <EditText
        android:id="@+id/dexterityEditText"
        android:layout_width="276dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@id/dexterityTextView"
        app:layout_constraintTop_toBottomOf="@+id/strengthEditText" />

    <EditText
        android:id="@+id/constitutionEditText"
        android:layout_width="276dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@id/constitutionTextView"
        app:layout_constraintTop_toBottomOf="@+id/dexterityEditText" />

    <EditText
        android:id="@+id/intelligenceEditText"
        android:layout_width="276dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@id/intelligenceTextView"
        app:layout_constraintTop_toBottomOf="@+id/constitutionEditText" />

    <EditText
        android:id="@+id/wisdomEditText"
        android:layout_width="276dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@id/wisdomTextView"
        app:layout_constraintTop_toBottomOf="@+id/intelligenceEditText" />

    <EditText
        android:id="@+id/charismaEditText"
        android:layout_width="276dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@id/charismaTextView"
        app:layout_constraintTop_toBottomOf="@+id/wisdomEditText" />

    <Button
        android:id="@+id/createCharacterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/create_character"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charismaEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>